--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/base": "^1.0.0-beta.3",
+    "@cloudinary/react": "^1.0.0-beta.8",
     "@types/mongodb": "^3.6.19",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
@@ -16,6 +18,7 @@
     "next": "11.0.1",
     "next-auth": "^3.27.1",
     "react": "17.0.2",
+    "react-detect-click-outside": "^1.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "socket.io-client": "^4.1.2",
