--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mongodb": "^3.6.19",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
+    "axios": "^0.21.1",
     "mongodb": "^3.6.9",
     "next": "11.0.1",
     "next-auth": "^3.27.1",
