--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.171",
     "@types/mongodb": "^3.6.19",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.9",
     "next": "11.0.1",
     "next-auth": "^3.27.1",
