--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "socket.io-client": "^4.1.2",
+    "swr": "^0.5.6",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
