--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.171",
-    "@types/mongodb": "^3.6.19",
-    "@types/node": "^16.0.0",
-    "@types/react": "^17.0.13",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.9",
@@ -22,14 +18,18 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "socket.io-client": "^4.1.2",
-    "swr": "^0.5.6",
-    "typescript": "^4.3.5"
+    "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.171",
+    "@types/mongodb": "^3.6.20",
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.3.5"
   }
 }
