--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "emoji-mart": "^3.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.9",
     "next": "11.0.1",
@@ -21,6 +22,7 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.5",
     "@types/lodash": "^4.14.171",
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.3.2",
