--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "socket.io-client": "^4.1.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/emoji-mart": "^3.0.5",
@@ -27,6 +28,7 @@
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
+    "@types/uuid": "^8.3.1",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
