--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.2.0",
     "socket.io-client": "^4.1.2",
     "swr": "^0.5.6",
+    "timeago-react": "^3.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
