--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.2",
     "swr": "^0.5.6",
     "timeago-react": "^3.0.3",
@@ -29,6 +30,7 @@
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
+    "@types/simple-peer": "^9.11.1",
     "@types/uuid": "^8.3.1",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
