--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "socket.io-client": "^4.1.2",
     "swr": "^0.5.6",
     "timeago-react": "^3.0.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webrtc-adapter": "^8.0.0"
   },
   "devDependencies": {
     "@types/emoji-mart": "^3.0.5",
@@ -32,6 +33,7 @@
     "@types/react": "^17.0.14",
     "@types/simple-peer": "^9.11.1",
     "@types/uuid": "^8.3.1",
+    "@types/webrtc": "^0.0.29",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
