--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.2",
     "swr": "^0.5.6",
